crates/plugin_partial_bundling/src/merge_module_pots/snapshots/enforce_configs_concurrent_requests.snap
---
source: crates/plugin_partial_bundling/src/merge_module_pots/test_enforce_configs.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: H_44bd_2328
id: B_2328_2328
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
    ModuleId {
        relative_path: "H",
        query_string: "",
    },
]
resources: []
