crates/plugin_partial_bundling/src/merge_module_pots/snapshots/enforce_configs_min_size-2.snap
---
source: crates/plugin_partial_bundling/src/merge_module_pots/test_enforce_configs.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: D_3f39
id: B_2328
immutable: true
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
    ModuleId {
        relative_path: "H",
        query_string: "",
    },
]
resources: []

-------

name: B_2f5d
id: B_2f5d
immutable: false
resource_pot_type: Js
entry: None
module_groups: []
modules: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []
